@@ -2,7 +2,7 @@
 """
 import sys
 import os, shutil, tempfile, unittest
-from setuptools.command.easy_install import easy_install, get_script_args
+from setuptools.command.easy_install import easy_install, get_script_args, main
 from setuptools.dist import Distribution
 
 class FakeDist(object):
@@ -26,6 +26,12 @@ if __name__ == '__main__':
         load_entry_point('spec', 'console_scripts', 'name')()
     )
 """ % sys.executable
+
+SETUP_PY = """\
+from setuptools import setup
+
+setup(name='foo')
+"""
 
 class TestEasyInstallTest(unittest.TestCase):
 
@@ -51,4 +57,36 @@ class TestEasyInstallTest(unittest.TestCase):
             sys.platform = old_platform
 
         self.assertEquals(script, WANTED)
+
+    def test_no_setup_cfg(self):
+        # makes sure easy_install as a command (main)
+        # doesn't use a setup.cfg file that is located
+        # in the current working directory
+        dir = tempfile.mkdtemp()
+        setup_cfg = open(os.path.join(dir, 'setup.cfg'), 'w')
+        setup_cfg.write('[easy_install]\nfind_links = http://example.com')
+        setup_cfg.close()
+        setup_py = open(os.path.join(dir, 'setup.py'), 'w')
+        setup_py.write(SETUP_PY)
+        setup_py.close()
+
+        from setuptools.dist import Distribution
+
+        def _parse_command_line(self):
+            msg = 'Error: a local setup.cfg was used'
+            opts = self.command_options
+            if 'easy_install' in opts:
+                assert 'find_links' not in opts['easy_install'], msg
+            return self._old_parse_command_line
+
+        Distribution._old_parse_command_line = Distribution.parse_command_line
+        Distribution.parse_command_line = _parse_command_line
+
+        old_wd = os.getcwd()
+        try:
+            os.chdir(dir)
+            main([])
+        finally:
+            os.chdir(old_wd)
+            shutil.rmtree(dir)
 
