@@ -15,6 +15,8 @@ CHANGES
 * Issue 80: test_develop now works with Python 3.1
 * Issue 93: upload_docs now works if there is an empty sub-directory.
 * Issue 70: exec bit on non-exec files
+* Issue 99: now easy_install doesn't usesa  "setup.cfg" if any exists in
+  the working directory.
 
 -----
 0.6.8
